--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^24.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.0",
+    "@draft-js-plugins/undo": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "draft-convert": "^2.1.10",
+    "draft-js": "^0.10.5",
+    "draft-js-inline-toolbar-plugin": "^3.0.1",
+    "draft-js-side-toolbar-plugin": "^3.0.2",
+    "draftail": "^1.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
