--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "dateformat": "^4.5.1",
     "draft-convert": "^2.1.10",
     "draft-js": "^0.10.5",
     "draft-js-inline-toolbar-plugin": "^3.0.1",
